--- a/backend/WarehouseManagement/docker-compose.yml
+++ b/backend/WarehouseManagement/docker-compose.yml
@@ -30,13 +30,13 @@ services:
         condition: service_healthy
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=80
     image: ${DOCKER_REGISTRY-}warehousemanagementapi
     build:
       context: .
       dockerfile: WarehouseManagement.API/Dockerfile
     ports:
-      - "8080:8080"
-      - "8081:8081"
+      - "8080:80"
     networks:
       - warehousemanagement-network
 
