--- a/backend/WarehouseManagement/WarehouseManagement.API/WarehouseManagement.API.csproj
+++ b/backend/WarehouseManagement/WarehouseManagement.API/WarehouseManagement.API.csproj
@@ -7,6 +7,8 @@
     <UserSecretsId>331b8208-5e1a-4ae4-ba3d-d7a5f946f295</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
