--- a/backend/WarehouseManagement/WarehouseManagement.BusinessLogic/WarehouseManagement.BusinessLogic.csproj
+++ b/backend/WarehouseManagement/WarehouseManagement.BusinessLogic/WarehouseManagement.BusinessLogic.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\WarehouseManagement.Domain\WarehouseManagement.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ReceiptDocuments\Validators\" />
+  </ItemGroup>
+
 </Project>
